@@ -1,3 +1,9 @@
+2016-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tools/tiffdump.c (ReadDirectory): Remove uint32 cast to
+	_TIFFmalloc() argument which resulted in Coverity report.  Added
+	more mutiplication overflow checks.
+
 2016-11-18 Even Rouault <even.rouault at spatialys.com>
 
 	* tools/tiffcrop.c: Fix memory leak in (recent) error code path.
